Fixed emoji randomization. Made hidden suit more visible. Live hand reordering. Fixed bug where someone being disconnected during end equation forming would prevent the game from continuing.

--- a/public/style.css
+++ b/public/style.css
@@ -937,7 +937,7 @@ body.show-home-bg .grid-container {
 }
 
 .secret {
-    opacity: 0.5;
+    opacity: 0.75;
 }
 
 .single-digit {
